--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ font-family: cursive;      }
 </Head>
 <Body>
  
- <h1 style="color:#808089;"> Welcome To Music Picker 1.14.4</h1>
+ <h1 style="color:#808089;"> Theory of Relativity</h1>
  
 <p>Hello nerds</a> </p>
 
