--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-
 <!DOCTYPE html>
 <Html>
 <Head>
@@ -30,8 +28,8 @@ font-family: cursive;      }
 <Body>
  
  <h1 style="color:#808089;"> Theory of Relativity</h1>
- <audio autoplay src="BeethovenSilence.mp3">
-Sorry, your browser does not support the audio tag used in this demo.
+ <audio autoplay>
+<source src="BeethovenSilence.mp3">
 </audio>
 <p>Hello nerds</a> </p>
 
