--- a/index.html
+++ b/index.html
@@ -31,8 +31,13 @@ font-family: cursive;      }
  <audio autoplay>
 <source src="BeethovenSilence.mp3">
 </audio>
-<p>Hello nerds</a> </p>
-
+<p>In 1905, German born physicist Albert Einstein theorized that while the speed<br>
+of light is constant, other things that seem constant- such as space and   
+time- <br>are not. Space and time can change when measured relative to an objectmoving <br>
+near the speed of light- about 186,000 miles per second. Since relative motion<br>
+is the key to Einstein's idea, it is called the theory of relativity. Einstein's ideas<br>
+had implications not only for science, but also for how people observed the world.
+</a> </p>
 </Body>
 </Html>
 
