--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ had implications not only for science, but also for how people observed the worl
 <iframe width="560" height="315" src="https://www.youtube.com/embed/AInCqm5nCzw"
  frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" 
  allowfullscreen></iframe>
+<p style="color:#FFFFFF">
+   .<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.<br>.
+ </p>
 </Body>
 </Html>
 
